# casperlens

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  compose.yaml  flake.nix
.github/workflows/: server_lint.yaml
casperlens-contract/: CHANGELOG.md
contract/: .gitignore  Cargo.toml  Odra.toml  README.md
contract/resources/: contracts.toml
contract/src/: lib.rs  observability.rs
contract/tests/: observability_test.rs
docs/docs/: index.md
docs/docs/.vitepress/: config.mts
docs/docs/docs/: intro.md
server/: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
server/.sqlx/: query-00b54c7ff3f36b9a398e605fcc096fc62ffca93fed87d04fdcded2654705f185.json  query-03beba408fe71a29d4cd7820b594cfc2f42a38fb36624d60ecaa6f1f0a312192.json  query-084fe817015443e588da28b1aa7cceeb5f71806fca0127c5fb22fd930ab1968a.json  query-2b5124782f3edccac40e80f79cd9846ca08ecf98206f21e4ca7090c61378abc5.json  query-606f57a049c39487d69568f8a55d6443a3c399da3bbbe6cc8b9df21db195b9b4.json  query-8a16b98eee0041aee13f6c59d442378511bd07e92183558730411ef1d20490de.json  query-da0fae65c47e73c51df536dd9c030e0b8dd8848c15b699a50af68e2222e637ac.json  query-e732beae97827cb270b7cc8b3c46eda168968af2f88f9144c1fec84a6b82d726.json  query-f06e4420e0438bd55669dc75e12431e06a60a1076ec507e678a50d1daaa04d91.json  query-f7c77475a9d211587b3bddd1a0540d01c93887c09ed046c4b7eb8e9df9ec8b44.json  query-fe00a91b4899f247ef7c6272c30322c8460599eaf02c28d3797c3470655bb5c9.json  query-fec15d4b5fa5771e7ab11d3874dbe21a2e1596935c8e2b3a0063e64654c94bb0.json
server/migrations/: 0001_init_database.sql  0001_init_schema.sql  0002_create_contract_versions.sql  0003_remove_user_id_constraint.sql
server/src/: main.rs
server/src/config/: mod.rs
server/src/constants/: headers.rs  mod.rs  network.rs
server/src/middleware/: cors.rs
server/src/models/: mod.rs  result.rs
server/src/models/api/: contract.rs  mod.rs  transaction.rs
server/src/models/schema/: contract.rs
server/src/routers/: health.rs  mod.rs
server/src/routers/contract/: mod.rs
server/src/services/: mod.rs
server/src/services/contract/: diff.rs  metadata.rs  mod.rs  package.rs  transaction.rs
server/src/services/database/: contract.rs
server/src/services/tasks/: contract.rs  mod.rs
server/src/utils/: mod.rs
web/: Dockerfile  README.md  package.json
web/src/: middleware.ts
web/src/app/: globals.css  page.tsx  (+1 more)
web2/: components.json  package.json
web2/src/: middleware.ts
(+46 files in other folders)
