[package]
name = "casperlens_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { version = "2.4.0", default-features = true }

[dev-dependencies]
odra-test = { version = "2.4.0", default-features = true }

[build-dependencies]
odra-build = { version = "2.4.0", default-features = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.4.0", default-features = true }
odra-cli = { version = "2.4.0", default-features = true }

[[bin]]
name = "casperlens_contract_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
