[package]
name = "casperlens-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros"] }
casper-client = "5.0.0"
casper-types = { version = "6.1.0", features = ["json-schema"] }
chrono = { version = "0.4.42", features = ["serde"] }
const_format = { version = "0.2.35", features = ["fmt"] }
dotenvy = "0.15.7"
log = { version = "0.4.29", features = ["serde"] }
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"]}
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["tracing"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utoipa = { version = "5.4.0", features = ["auto_into_responses", "axum_extras", "chrono", "preserve_order", "preserve_path_order", "uuid"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
